# google-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  SETUP.md  config.toml.example  pyproject.toml
google_tui/: __init__.py  app_config.py  ask.py  bindings.py  cache.py  drive_sources.py  fetchers.py  ftp_creds.py  gauth.py  list_tables.py  main.py  popular_feeds.py  remote_creds.py  render.py  settings.py  setup_instructions.py  updater.py
hooks/: post-merge  pre-commit
scripts/: bump_version.py  generate_screenshot.py
tests/: conftest.py  isolate.py  test_pilot_scenarios.py
tests/pilot/: bookmarks_datatable.py  bookmarks_sort.py  browser_sftp_redirect.py  config_toml_overrides.py  contacts_datatable.py  dashboard_external_cards.py  dashboard_lists_datatable.py  drive_datatable_nav.py  drive_google_regression.py  drive_markdown_preview.py  drive_remote_source_switch.py  email_offline_preview.py  email_reply_fetch_error.py  email_reply_modal.py  email_to_task_event.py  event_task_markdown.py  fakes.py  mail_attachments.py  mail_datatable_expand.py  mail_multiselect.py  mail_snooze.py  mail_star_undo_compose.py  news_datatable.py  popular_feeds_picker.py  responsive_rows.py  startup_smoke.py  toast_dedup_reauth.py
tests/unit/: test_app_config.py  test_cache.py  test_drive_is_folder.py  test_drive_sources.py  test_email_row.py  test_gauth_attachments.py  test_gauth_mime.py  test_gauth_send.py  test_list_row_cellwidth.py  test_news_dedup.py  test_remote_creds.py  test_render.py
